RESOLVED FIXED272636
[IFC][Integration] Decouple style update and invalidation on style change
https://bugs.webkit.org/show_bug.cgi?id=272636
Summary [IFC][Integration] Decouple style update and invalidation on style change
alan
Reported 2024-04-13 19:23:37 PDT
ssia
Attachments
Patch (14.40 KB, patch)
2024-04-13 19:41 PDT, alan
no flags
Patch (14.70 KB, patch)
2024-04-15 14:24 PDT, alan
no flags
Patch (14.87 KB, patch)
2024-04-15 18:59 PDT, alan
no flags
[fast-cq]Patch (14.90 KB, patch)
2024-04-16 07:24 PDT, alan
no flags
alan
Comment 1 2024-04-13 19:41:22 PDT
alan
Comment 2 2024-04-15 14:24:59 PDT
alan
Comment 3 2024-04-15 18:59:18 PDT
alan
Comment 4 2024-04-16 07:24:19 PDT
Created attachment 470937 [details] [fast-cq]Patch
EWS
Comment 5 2024-04-16 10:49:23 PDT
Committed 277555@main (da0c8718b475): <https://commits.webkit.org/277555@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470937 [details].
Radar WebKit Bug Importer
Comment 6 2024-04-16 10:50:19 PDT
Note You need to log in before you can comment on or make changes to this bug.