Source/WebCore/rendering/RenderInline.cpp
@@ -194,13 +194,9 @@ void RenderInline::styleDidChange(StyleDifference diff, const RenderStyle* oldSt
             updateStyleOfAnonymousBlockContinuations(*containingBlock(), &newStyle, oldStyle);
     }
 
-    if (diff >= StyleDifference::Repaint) {
-        if (auto* lineLayout = LayoutIntegration::LineLayout::containing(*this)) {
-            if (selfNeedsLayout())
-                lineLayout->flow().invalidateLineLayoutPath(RenderBlockFlow::InvalidationReason::StyleChange);
-            else
-                lineLayout->updateStyle(*this, *oldStyle);
-        }
+    if (diff >= StyleDifference::Repaint && selfNeedsLayout()) {
+        if (auto* lineLayout = LayoutIntegration::LineLayout::containing(*this))
+            lineLayout->flow().invalidateLineLayoutPath(RenderBlockFlow::InvalidationReason::StyleChange);
     }
 
     propagateStyleToAnonymousChildren(StylePropagationType::AllChildren);
